--- a/package.json
+++ b/package.json
@@ -14,9 +14,19 @@
   },
   "dependencies": {
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "babel-runtime": "^6.6.1"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5"
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.2.2",
+    "react-scripts": "0.9.5",
+    "webpack": "^2.3.1",
+    "babel-plugin-transform-runtime": "^6.8.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.5.0"
   }
 }
