--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Adthasit Suksomthawisap",
   "license": "ISC",
   "scripts": {
-    "start": "webpack",
+    "start": "webpack-dev-server --hot --inline",
     "start-dev-ui": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
@@ -20,13 +20,14 @@
   "devDependencies": {
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
-    "babel-preset-env": "^1.2.2",
-    "react-scripts": "0.9.5",
-    "webpack": "^2.3.1",
     "babel-plugin-transform-runtime": "^6.8.0",
+    "babel-preset-env": "^1.2.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.5.0"
+    "babel-preset-stage-0": "^6.5.0",
+    "react-scripts": "0.9.5",
+    "webpack": "^2.3.1",
+    "webpack-dev-server": "^2.4.2"
   }
 }
